# DataDistillerAI

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  KNOWLEDGE_GRAPH_GUIDE.md  MULTI_LLM_GUIDE.md  Makefile  OLLAMA_GUIDE.md  PROJECT_MAP.txt  PROJECT_TRANSFORMATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_V1.md  README_V2.md  SETUP_SUMMARY.py  UI_README.md  VERIFICATION.md  WEB_UI_GUIDE.md  app.py  app_hybrid.py  app_simple.py  cli.py  docker-compose.yml  launch_phase2_3.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  setup_ollama.py  start_2.0.sh  test_claude.py  test_knowledge_graph.py  verify_installation.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
api/: main.py  models.py
api/v2/: query.py  upload.py
config/: settings.py
data/: knowledge_graph_interactive.html  knowledge_graph_phase1.json
data/documents/: DynamicProgrammingNotes.txt  Load_Balancer.txt  SDE_PRACTICE.txt  deep_learning.txt  machine_learning.txt
docker/: init-db.sql  prometheus.yml
docs/: EXAMPLES.md  V1_ARCHITECTURE.md  V1_SETUP.md
docs/archive/: ARCHITECTURE.md  CLAUDE_SETUP.md  DATADISTILLER_2.0_ROADMAP.md  PHASE1_KAFKA_SETUP.md  PHASE2_3_COMPLETE.md  PHASE2_3_SETUP.md  PHASE4_AI_PROGRESSION.md  PROJECT_STATUS.py  PROJECT_SUMMARY.md  QUERY_FIX.md  QUICKSTART.md  README_2.0.md  RUNNING_STATUS.md  START_HERE.txt  UI_INTEGRATION.md  WEBAPP_QUICK_REFERENCE.md  WEBAPP_VERIFICATION.md  setup_claude.py  setup_gemini.py
docs_site/: index.md
docs_site/about/: changelog.md  license.md
docs_site/advanced/: v2-setup.md
docs_site/architecture/: overview.md
docs_site/getting-started/: quickstart.md  verification.md
docs_site/guides/: faq.md
examples/: basic_rag.py  quickstart.py  sample_data.py  usage_examples.py
examples/data/documents/: deep_learning.txt  ml_fundamentals.txt
scripts/: smoke_test.py
src/: __init__.py  knowledge_graph.py  llm_claude.py  llm_gemini.py  llm_ollama.py  workflows_claude.py  workflows_gemini.py  workflows_ollama.py
src/ingestion/: __init__.py
src/llm/: __init__.py
src/processing/: __init__.py  chunker.py
src/retrieval/: __init__.py  bm25_index.py  hybrid_retriever.py
src/workflows/: __init__.py
storage/: clients.py
tests/: conftest.py  test_ingestion.py  test_processing.py
tests_v1/: test_gemini.py  test_kg_phase1.py  test_kg_phase2.py  test_kg_phase3.py  test_kg_phase4.py  test_ollama.py  test_ollama_connection.py  test_webapp.py
tests_v2/: check_phase2_3.py  quick_test.py  status.py  test_phase2_3.py  test_query.py
workers/: embedding_worker.py  ingestion_worker.py  test_kafka_consumer.py  test_kafka_producer.py
