[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datadistiller-ai"
version = "1.0.0"
description = "Intelligent Document Q&A with RAG and Knowledge Graph Visualization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DataDistiller AI Contributors"}
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "knowledge-graph",
    "document-qa",
    "nlp",
    "llm",
    "ollama",
    "streamlit",
    "semantic-search"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "pypdf>=3.17.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "streamlit>=1.0.0",
    "spacy>=3.7.0",
    "networkx>=3.2.0",
    "pyvis>=0.3.2",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

cloud-llm = [
    "google-generativeai>=0.1.0",
    "anthropic>=0.7.0",
]

production = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "kafka-python==2.0.2",
    "boto3>=1.28.0",
    "minio>=7.2.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "prometheus-client>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/BranchZeroDevs/DataDistillerAI"
Documentation = "https://github.com/BranchZeroDevs/DataDistillerAI#readme"
Repository = "https://github.com/BranchZeroDevs/DataDistillerAI"
Issues = "https://github.com/BranchZeroDevs/DataDistillerAI/issues"

[project.scripts]
datadistiller = "cli:main"

[tool.setuptools]
packages = ["src", "src.ingestion", "src.processing", "src.retrieval", "src.llm", "src.workflows"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
